# mundy_mock_app_tribits

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  PackagesList.cmake  ProjectName.cmake  README.md  TPLsList.cmake  Version.cmake  do-cmake.sh
cmake/: MundyTribitsAddLibrary.cmake  MundyTribitsInstallDirectories.cmake  Sam_config.hpp.in
cmake/TPLs/: FindTPLGTest.cmake  FindTPLKokkos.cmake  FindTPLMundy.cmake
sam/: CMakeLists.txt  hello.cpp  hello.hpp
sam/cmake/: Dependencies.cmake
sam/examples/: CMakeLists.txt  ExampleApp.cpp
sam/tests/: CMakeLists.txt
sam/tests/unit_tests/: CMakeLists.txt  DefaultUnitTestMain.cpp  UnitTestTest.cpp  UnitTestTestNoMain.cpp
src/: CMakeLists.txt  main.cpp
tests/: GTestMain.cpp
tests/unit_tests/: CMakeLists.txt  TestUnitTests.cpp
